--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,7 @@ log/*
 Common/config.php
 db_cache/*
 htmls/home/templates_c/*
+htmls/home/cache
 htmls/admin/templates_c/*
+htmls/admin/cache
 .externalToolBuilders
